<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">De urgenta</string>

    <!-- General -->
    <string name="loading_label">Loading…</string>

    <!--    Permissions-->
    <string name="permission_permanently_denied_title">Permission needed</string>
    <string name="permission_permanently_denied_msg">To use this function, you have to change the app permissions. Please open the Settings menu and grant access to the requested permissions.</string>
    <string name="permission_permanently_denied_settings_button">Settings</string>

    <string name="permission_denied_title">Permission needed</string>
    <string name="permission_denied_msg">To use this function we need your permission to access the storage.</string>
    <string name="permission_denied_ok_button">OK</string>
    <string name="permission_denied_cancel_button">Cancel</string>

    <!-- Errors -->
    <string name="error_generic">Something went wrong!</string>
    <string name="error_field_required">This field is required!</string>
    <string name="error_email_invalid">Email not valid!</string>
    <string name="error_password_invalid">Password not valid!</string>
    <string name="error_password_not_matched">Password not matched!</string>
    <string name="login_fragment_name">Login Fragment</string>
    <string name="login_form_title">Autentifica-te</string>
    <string name="email_hint">E-mail</string>
    <string name="password_hint">Parola</string>
    <string name="forgot_password_text">Ti-ai uitat parola?</string>
    <string name="login_button_text">Intra in contul tau</string>
    <string name="login_divider_text">sau</string>

    <!-- Home -->
    <string name="home_title">De Urgență</string>
    <string name="home_header_title">Bine ai revenit.</string>
    <string name="home_header_description">This is a small text to welcome the user back in the app and excite him to do something to be more prepared.</string>
    <string name="home_menu_item_address">Adrese și trasee</string>
    <string name="home_menu_item_group">Grupul de urgență</string>
    <string name="home_menu_item_backpack">Rucsacul de urgență</string>
    <string name="home_menu_item_courses">Cursuri și info utile</string>

    <!-- Login screen -->
    <string name="login_button_signup" translatable="false">Sign up</string>
    <string name="login_button_login" translatable="false">Authenticate</string>
    <string name="login_title" translatable="false">Did you make your plan in case of an emergency?</string>
    <string name="login_subtitle" translatable="false">Let\'s do it together!</string>

    <!-- Register screen -->
    <string name="register_title" translatable="false">Create your account</string>
    <string name="register_label_first_name" translatable="false">First name</string>
    <string name="register_label_last_name" translatable="false">Last name</string>
    <string name="register_label_email" translatable="false">Email</string>
    <string name="register_label_password" translatable="false">Password</string>
    <string name="register_terms_text" translatable="false">Accept {link}</string>
    <string name="register_terms_link_text" translatable="false">terms and conditions</string>
    <string name="register_submit_button" translatable="false">Submit ➔</string>
    <string name="register_completed_title" translatable="false">Validate your account</string>
    <string name="register_completed_message" translatable="false">An e-mail was sent to the address where you made your account blah blah please click on the link to validate the account etc.</string>

    <!-- Nav menu screen -->
    <string name="nav_menu_footer_donate_button_title">Donează</string>
    <string name="nav_menu_footer_description">Soluție proiectată, dezvoltată și administrată de</string>
    <string name="nav_menu_item_address">Adrese și trasee</string>
    <string name="nav_menu_item_groups">Grupuri de urgență</string>
    <string name="nav_menu_item_backpack">Rucsacul de urgență</string>
    <string name="nav_menu_item_courses">Cursuri și informații utile</string>
    <string name="nav_menu_item_profile">Profilul meu</string>
    <string name="nav_menu_item_about">Despre aplicație</string>
    <string name="nav_menu_item_settings">Setări</string>
    <string name="nav_menu_item_logout">Delogare</string>

    <string name="cd_logo">Animated application logo</string>
    <!-- Backpack -->
    <string name="backpacks_listing_title">"Your emergency backpack"</string>
    <string name="backpack_label_main_info">The emergency backpack contains objects, food and other useful items which
        will help you survive for at least 72 hours in a critical situation. Following the next steps you will find
        out what does this backpack must contain, the minimum required items and choose the people responsible for
        keeping it relevant.
    </string>
    <string name="backpack_add_new">Add new backpack</string>
    <string name="backpack_new_cancel">Cancel</string>
    <string name="backpack_new_ok">OK</string>
    <string name="backpack_btn_reminder">Remind me later</string>
    <string name="backpack_label_details_info">There are certain items which are recommended to have in this backpack.
        Even if you do not have the backpack yet, store the items until you acquire one. It is recommended that
        the backpack is waterproof or made from a resistant material.
        The backpack is the responsibility of all the people living in the house. If you live with someone else,
        invite the person to use this app and together make sure you always have the required items in the backpack.
    </string>
    <string name="backpack_categories_label">Backpack components</string>
    <string name="backpack_designated_person">Choose person responsible</string>
    <string name="backpack_new_name_dialog_title">Name of new backpack</string>
    <string name="item_expiration_label">Expire at: %1$s</string>
    <string name="no_expiration_date">No expiration date</string>
    <string name="item_quantity_label">%1$s x</string>
    <string name="item_btn_delete">Delete</string>
    <string name="edit_backpack_item_name_label">Product name</string>
    <string name="edit_backpack_item_quantity_label">Quantity</string>
    <string name="edit_backpack_item_date_label">Expires at</string>
    <string name="btn_item_change_new">Add item</string>
    <string name="btn_item_change_update">Update item</string>
    <string name="btn_item_cancel">Cancel</string>
    <string name="backpack_category_empty">You do not have any items of this type. Please use the button below and add
        some.</string>
    <string name="backpack_edit_item_date_label">Click to select expiration date</string>
    <string name="edit_backpack_item_error_date">Please enter a future expiration date!</string>
    <string name="edit_backpack_item_error_name">Please name the product!</string>
    <string name="edit_backpack_item_error_quantity">Please provide a quantity</string>
    <string name="edit_backpack_item_error_quantity_value">"Please enter a valid number quantity!"</string>

    <!-- Configure account -->
    <string name="configure_addresses" translatable="false">Configure Addresses</string>
    <string name="item_description_configure_account">Configure your account</string>
    <string name="create_your_account">Configure your account</string>
    <string name="save_address">Save Address</string>
    <string name="create_your_group">Create your group</string>
    <string name="enter_your_address">Enter your address</string>
    <string name="make_your_emergency_backpack">Make your emergency backpack</string>
    <string name="learn_to_give_firstaid">Learn how to give first aid</string>
    <string name="locate_me">Locate me</string>
    <string name="search_hint">enter your address</string>
    <string name="configure_addresses_save_address" translatable="false">Save Address Fragment</string>
    <string name="add_your_own_address">Add your own address</string>

    <string name="more_results_found">More addresses found. Please enter an unique address.</string>

    <string name="home_address">Home Address</string>
    <string name="add_new_address">Add a new address</string>
    <string name="set_meeting_point">Set meeting point</string>
    <string name="add_another_address_description">Add other relevant addresses like the office address,
    gym address or other place that you visit weekly. You can add up to 5 addresses.
    After this step you could select a meeting point and visualize the routes between
    your saved addresses and your meeting point. </string>

    <string name="configure_another_address_header">Configure another address</string>
    <string name="save_address_home_info">Your home address was saved successfully.</string>


    <string name="item_address_header">Address Header</string>
    <string name="item_address_content">Address content</string>
    <string name="choose_address_type">Choose address type</string>
    <!-- end need translation -->
</resources>
