<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="callbackAddresses"
            type="ro.code4.deurgenta.interfaces.ConfigureCallback" />

        <variable
            name="callbackCreateGroup"
            type="ro.code4.deurgenta.interfaces.ConfigureCallback" />

        <variable
            name="callbackBackpack"
            type="ro.code4.deurgenta.interfaces.ConfigureCallback" />

        <variable
            name="callbackFirstAid"
            type="ro.code4.deurgenta.interfaces.ConfigureCallback" />

        <variable
            name="enabled"
            type="boolean" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/logo_red"
            app:layout_constraintStart_toEndOf="@+id/left_margin_guideline"
            app:layout_constraintTop_toBottomOf="@+id/top_margin_guideline" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_configure_account_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="@dimen/big_margin"
            android:gravity="start"
            android:maxWidth="320dp"
            android:maxLines="3"
            android:text="@string/create_your_account"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:textSize="@dimen/text_size_xbig"
            app:layout_constraintStart_toStartOf="@+id/header"
            app:layout_constraintTop_toBottomOf="@+id/header" />

        <LinearLayout
            android:id="@+id/ll_configure_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/big_margin"
            android:onClick="@{()-> callbackAddresses.configure()}"
            android:orientation="horizontal"
            android:weightSum="1"

            app:layout_constraintEnd_toStartOf="@+id/right_margin_guideline"
            app:layout_constraintStart_toEndOf="@+id/left_margin_guideline"
            app:layout_constraintTop_toBottomOf="@+id/tv_configure_account_header">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_configure_address"
                android:layout_width="@dimen/picture_size_width_big"
                android:layout_height="@dimen/picture_size_height_big"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.1"
                app:srcCompat="@drawable/ic_map_layer" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_configure_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_gravity="center_vertical"
                android:layout_weight="0.8"

                android:text="@string/configure_addresses"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                android:textSize="@dimen/text_size_big"

                tools:text="@string/create_your_account" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_configure_arrow_address"
                android:layout_width="@dimen/picture_size_width_medium"
                android:layout_height="@dimen/picture_size_height_medium"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.1"
                app:srcCompat="@drawable/ic_minimalist_arrow" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_create_your_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:enabled="false"
            android:onClick="@{()-> callbackCreateGroup.configure()}"
            android:orientation="horizontal"
            android:weightSum="1"
            app:enabled="@{enabled}"
            app:layout_constraintEnd_toStartOf="@+id/right_margin_guideline"
            app:layout_constraintStart_toEndOf="@+id/left_margin_guideline"
            app:layout_constraintTop_toBottomOf="@+id/ll_configure_address">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_configure_group"
                android:layout_width="@dimen/picture_size_width_big"
                android:layout_height="@dimen/picture_size_height_big"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.1"
                app:srcCompat="@drawable/ic_map_layer" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_configure_group"
                android:layout_width="250dp"
                android:layout_height="wrap_content"

                android:layout_gravity="center_vertical"
                android:layout_weight="0.8"

                android:contentDescription="@string/item_description_configure_group"
                android:text="@string/create_your_group"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                android:textSize="@dimen/text_size_big"

                tools:text="@string/create_your_group" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_configure_arrow_group"
                android:layout_width="@dimen/picture_size_width_medium"
                android:layout_height="@dimen/picture_size_height_medium"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.1"
                app:srcCompat="@drawable/ic_minimalist_arrow" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_make_your_backpack"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:enabled="false"
            android:onClick="@{()-> callbackBackpack.configure()}"
            android:orientation="horizontal"
            android:weightSum="1"
            app:enabled="@{enabled}"
            app:layout_constraintEnd_toStartOf="@+id/right_margin_guideline"
            app:layout_constraintStart_toEndOf="@+id/left_margin_guideline"
            app:layout_constraintTop_toBottomOf="@+id/ll_create_your_group">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_configure_backpack"
                android:layout_width="@dimen/picture_size_width_big"
                android:layout_height="@dimen/picture_size_height_big"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.1"
                app:srcCompat="@drawable/ic_map_layer" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_configure_backpack"
                android:layout_width="250dp"
                android:layout_height="wrap_content"

                android:layout_gravity="center_vertical"
                android:layout_weight="0.8"

                android:contentDescription="@string/item_description_configure_account"
                android:text="@string/make_your_emergency_backpack"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                android:textSize="@dimen/text_size_big"

                tools:text="@string/make_your_emergency_backpack" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_configure_arrow_backpack"
                android:layout_width="@dimen/picture_size_width_medium"
                android:layout_height="@dimen/picture_size_height_medium"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.1"
                app:srcCompat="@drawable/ic_minimalist_arrow" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_howto_firstaid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:enabled="false"
            android:onClick="@{()-> callbackFirstAid.configure()}"
            android:orientation="horizontal"
            android:weightSum="1"
            app:enabled="@{enabled}"
            app:layout_constraintEnd_toStartOf="@+id/right_margin_guideline"
            app:layout_constraintStart_toEndOf="@+id/left_margin_guideline"
            app:layout_constraintTop_toBottomOf="@+id/ll_make_your_backpack">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_configure_firstaid"
                android:layout_width="@dimen/picture_size_width_big"
                android:layout_height="@dimen/picture_size_height_big"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.1"
                app:srcCompat="@drawable/ic_map_layer" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_configure_firstaid"
                android:layout_width="250dp"
                android:layout_height="wrap_content"

                android:layout_gravity="center_vertical"
                android:layout_weight="0.8"

                android:contentDescription="@string/item_description_configure_account"
                android:text="@string/make_your_emergency_backpack"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                android:textSize="@dimen/text_size_big"

                tools:text="@string/learn_to_give_firstaid" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_configure_arrow_firstaid"
                android:layout_width="@dimen/picture_size_width_medium"
                android:layout_height="@dimen/picture_size_height_medium"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.1"
                app:srcCompat="@drawable/ic_minimalist_arrow" />

        </LinearLayout>


        <!-- Guidelines -->

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_margin_guideline"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/top_margin_guideline"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_margin_guideline"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.96" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>